[project]
name = "wyzant_tutoring_response_generator"
version = "0.1.0"
description = "wyzant_tutoring_response_generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,file-processing,litellm,tools]==1.14.4",
]

[project.scripts]
wyzant_tutoring_response_generator = "wyzant_tutoring_response_generator.main:run"
run_crew = "wyzant_tutoring_response_generator.main:run"
train = "wyzant_tutoring_response_generator.main:train"
replay = "wyzant_tutoring_response_generator.main:replay"
test = "wyzant_tutoring_response_generator.main:test"
run_with_trigger = "wyzant_tutoring_response_generator.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
override-dependencies = ["litellm<=1.82.6"]
